Fixed header links spacing

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ a{
 .HeaderLink{
     font-size: 18px;
     color: white;
+    margin-right: 5%;
     
 }
    .flex-container .bodyText{
